@@ -604,97 +604,102 @@ class CItem extends CItemGeneral {
 	/**
 	 * Delete items.
 	 *
-	 * @param array $itemids
+	 * @param array $itemIds
+	 * @param bool  $noPermissions
 	 *
 	 * @return array
 	 */
-	public function delete(array $itemids, $nopermissions = false) {
-		if (empty($itemids)) {
+	public function delete(array $itemIds, $noPermissions = false) {
+		if (!$itemIds) {
 			self::exception(ZBX_API_ERROR_PARAMETERS, _('Empty input parameter.'));
 		}
 
-		$itemids = array_keys(array_flip($itemids));
+		$itemIds = array_keys(array_flip($itemIds));
 
 		$delItems = $this->get(array(
-			'itemids' => $itemids,
-			'editable' => true,
-			'preservekeys' => true,
 			'output' => array('name', 'templateid'),
-			'selectHosts' => array('name')
+			'selectHosts' => array('name'),
+			'itemids' => $itemIds,
+			'editable' => true,
+			'preservekeys' => true
 		));
 
 		// TODO: remove $nopermissions hack
-		if (!$nopermissions) {
-			foreach ($itemids as $itemid) {
-				if (!isset($delItems[$itemid])) {
+		if (!$noPermissions) {
+			foreach ($itemIds as $itemId) {
+				if (!isset($delItems[$itemId])) {
 					self::exception(ZBX_API_ERROR_PERMISSIONS, _('No permissions to referred object or it does not exist!'));
 				}
-				if ($delItems[$itemid]['templateid'] != 0) {
+				if ($delItems[$itemId]['templateid'] != 0) {
 					self::exception(ZBX_API_ERROR_PARAMETERS, _('Cannot delete templated item.'));
 				}
 			}
 		}
 
 		// first delete child items
-		$parentItemids = $itemids;
+		$parentItemIds = $itemIds;
 		do {
-			$dbItems = DBselect('SELECT i.itemid FROM items i WHERE '.dbConditionInt('i.templateid', $parentItemids));
-			$parentItemids = array();
+			$dbItems = DBselect('SELECT i.itemid FROM items i WHERE '.dbConditionInt('i.templateid', $parentItemIds));
+			$parentItemIds = array();
 			while ($dbItem = DBfetch($dbItems)) {
-				$parentItemids[] = $dbItem['itemid'];
-				$itemids[$dbItem['itemid']] = $dbItem['itemid'];
+				$parentItemIds[] = $dbItem['itemid'];
+				$itemIds[$dbItem['itemid']] = $dbItem['itemid'];
 			}
-		} while (!empty($parentItemids));
+		} while ($parentItemIds);
 
 		// delete graphs, leave if graph still have item
 		$delGraphs = array();
 		$dbGraphs = DBselect(
 			'SELECT gi.graphid'.
 			' FROM graphs_items gi'.
-			' WHERE '.dbConditionInt('gi.itemid', $itemids).
+			' WHERE '.dbConditionInt('gi.itemid', $itemIds).
 				' AND NOT EXISTS ('.
 					'SELECT NULL'.
 					' FROM graphs_items gii'.
 					' WHERE gii.graphid=gi.graphid'.
-						' AND '.dbConditionInt('gii.itemid', $itemids, true).
+						' AND '.dbConditionInt('gii.itemid', $itemIds, true).
 				')'
 		);
 		while ($dbGraph = DBfetch($dbGraphs)) {
 			$delGraphs[$dbGraph['graphid']] = $dbGraph['graphid'];
 		}
 
-		if (!empty($delGraphs)) {
-			$result = API::Graph()->delete($delGraphs, true);
-			if (!$result) {
-				self::exception(ZBX_API_ERROR_PARAMETERS, _('Cannot delete graph.'));
-			}
+		if ($delGraphs) {
+			API::Graph()->delete($delGraphs, true);
 		}
 
 		// check if any graphs are referencing this item
-		$this->checkGraphReference($itemids);
+		$this->checkGraphReference($itemIds);
 
 		$triggers = API::Trigger()->get(array(
-			'itemids' => $itemids,
-			'output' => array('triggerid'),
+			'output' => array(),
+			'itemids' => $itemIds,
 			'nopermissions' => true,
 			'preservekeys' => true
 		));
-		if (!empty($triggers)) {
-			$result = API::Trigger()->delete(array_keys($triggers), true);
-			if (!$result) {
-				self::exception(ZBX_API_ERROR_PARAMETERS, _('Cannot delete trigger.'));
-			}
+		if ($triggers) {
+			API::Trigger()->delete(array_keys($triggers), true);
+		}
+
+		$triggerPrototypes = API::TriggerPrototype()->get(array(
+			'output' => array(),
+			'itemids' => $itemIds,
+			'nopermissions' => true,
+			'preservekeys' => true
+		));
+		if ($triggerPrototypes) {
+			API::TriggerPrototype()->delete(array_keys($triggerPrototypes), true);
 		}
 
 		DB::delete('screens_items', array(
-			'resourceid' => $itemids,
+			'resourceid' => $itemIds,
 			'resourcetype' => array(SCREEN_RESOURCE_SIMPLE_GRAPH, SCREEN_RESOURCE_PLAIN_TEXT)
 		));
-		DB::delete('items', array('itemid' => $itemids));
+		DB::delete('items', array('itemid' => $itemIds));
 		DB::delete('profiles', array(
 			'idx' => 'web.favorite.graphids',
 			'source' => 'itemid',
-			'value_id' => $itemids
+			'value_id' => $itemIds
 		));
 
 		$itemDataTables = array(
@@ -707,12 +712,12 @@ class CItem extends CItemGeneral {
 			'history'
 		);
 		$insert = array();
-		foreach ($itemids as $itemid) {
+		foreach ($itemIds as $itemId) {
 			foreach ($itemDataTables as $table) {
 				$insert[] = array(
 					'tablename' => $table,
 					'field' => 'itemid',
-					'value' => $itemid
+					'value' => $itemId
 				);
 			}
 		}
@@ -724,7 +729,7 @@ class CItem extends CItemGeneral {
 			info(_s('Deleted: Item "%1$s" on "%2$s".', $item['name'], $host['name']));
 		}
 
-		return array('itemids' => $itemids);
+		return array('itemids' => $itemIds);
 	}
 
 	public function syncTemplates($data) {
